# happiness

./: .clang-format  .gitignore  .gitreview  .ycm_extra_conf.py  Android.bp  Android.mk  LICENSE  LICENSE.txt  README.md  ReadMe.md  software-bom-config.yaml  test_plan.py  vendorsetup.sh
hardware/carconfig/carconfig/test/ut/: Android.bp  AndroidTest.xml  CMakeLists.txt  carconfig_file_test.cpp  carconfig_reader_test.cpp  carconfig_test.cpp  carconfig_writer_test.cpp
hardware/carconfig/carconfig/test/ut/csv/: carconfig_file_out.csv  carconfig_file_out_of_range.csv
hardware/carconfig/carconfig_oneshot/test/ut/: CMakeLists.txt  carconfig_oneshot_test.cpp
hardware/carconfig/carconfig_oneshot/test/ut/mocks/: carconfig_writer.h
hardware/carconfig/carconfig_updater/test/ut/: CMakeLists.txt  carconfig_updater_test.cpp  diagnostics_client_test.cpp  restart_client_test.cpp  vipcom_client_test.cpp
hardware/carconfig/carconfig_updater/test/ut/mocks/: carconfig_file.h  mock_diagnostic_client.cpp  mock_diagnostic_client.h  mock_vipcom_client.cpp  mock_vipcom_client.h
hardware/carconfig/carconfig_updater/test/ut/stubs/: NodeStateTypes.h  carconfig_base.h  carconfig_parameterlist.h  ctime.c  ctime.h  diag_message_keys.h
hardware/carconfig/carconfig_updater/test/ut/stubs/dataelements/: Application_dataelement.h  gen_dataelements.cpp  gen_dataelements.h  gen_datatypes.h
hardware/carconfig/carconfig_updater/test/ut/stubs/vipcom/: vipcom_api.cpp  vipcom_api.h
hardware/carconfig/core/test/ut/: BadCmdline.txt  CMakeLists.txt  GoodCmdline.txt  GoodConfig.json  cedric_file_monitor_test.cpp
hardware/carconfig/core/test/ut/mocks/: mock_persAdminStore.c  mock_persAdminStore.h
hardware/infotainment-ip-service/libasn1/test/ut/: CMakeLists.txt
hardware/ipcb-daemon/infotainment_ip_service/test/ct/ota_services_test_client/: CMakeLists.txt
hardware/ipcb-daemon/infotainment_ip_service/test/ut/: CMakeLists.txt  test_carmodem_service.cpp  test_climate_timer_proxy.cpp  test_common_phone_tele_proxy.cpp  test_connectivity.cpp  test_connectivity_service.cpp  test_cpp_timers.cpp  test_diagnostic_management_service.cpp  test_enhanced_pos_client.cpp  test_gnss_service.cpp  test_iplm_service.cpp  test_local_config.cpp  test_notify_system_ui.cpp  test_ota_service.cpp  test_voc_backend_proxy.cpp  test_wifi_accesspoint_service.cpp  test_wlan_service.cpp
hardware/ipcb-daemon/infotainment_ip_service/test/ut/cmake/: shared.cmake
hardware/ipcb-daemon/infotainment_ip_service/test/ut/mocks/: MockLibSdBus.h  mock_car_modem_service_stub.cpp  mock_car_modem_service_stub.h  mock_climate_timer_proxy.cpp  mock_common_phone_tele_service_stub.cpp  mock_diagnostic_management_auth_proxy.h  mock_diagnostics_client.h  mock_gnss_service_stub.cpp  mock_gnss_service_stub.h  mock_iplm_service.h  mock_iplm_service_stub.cpp  mock_iplm_service_stub.h  mock_notify_system_ui.h  mock_ota_service_stub.cpp  mock_wlan_service_stub.h
hardware/ipcb-daemon/infotainment_ip_service/test/ut/stubs/: NodeStateTypes.h  stub_VolvoOnCallBackendProxy.cpp  stub_capi_attribute.hpp  stub_car_modem_service.cpp  stub_climate_timer.cpp  stub_common_phone_tele_proxy.cpp  stub_diagnostics_client.cpp  stub_enhanced_pos_client.cpp  stub_global_reset.cpp  stub_gnss_service_stub.cpp  stub_iplm_service_stub.cpp  stub_ota_swlm_proxy.cpp  stub_rvdc_client.cpp  stub_wifi_accesspoint_service.cpp  stub_workshop_wlan_service.cpp
hardware/ipcbd/libipcommandbus/test/ut/: CMakeLists.txt  testMessageDispatcher.cpp  testTransportServices.cpp  test_localconfig_parameters.cpp  test_net_deserializer.cpp  test_net_serializer.cpp  test_timeoutinfo.cpp  test_vcc_pdu_header.cpp
hardware/ipcbd/libipcommandbus/test/ut/mocks/: MockIdiagnosticsClient.h  MockTransportServices.h  MockUdpSocket.h
hardware/ipcbd/libipcommandbus/test/ut/stubs/: LocalconfigMessageTimeoutsStub.cpp
hardware/ipcbd/libipcommandbus/test/ut/stubs/cedric/: cedric_localconfig.h  (+1 more)
hardware/signals/dataelements/test/ut/: Android.mk  AndroidTest.xml  CMakeLists.txt  Mp_Router_crc.h  server_test.cpp  unittest.cpp
hardware/signals/dataelements/test/ut/dbus/: CMakeLists.txt  commbus_dbus_receiver_test.cpp  commbus_dbus_test.cpp
hardware/signals/dataelements/test/ut/vsm/: com_crc.h  swc_crc.h
hardware/signals/dataelements/tools/signalecho/: Android.bp  CMakeLists.txt  signalecho.cpp
hardware/signals/dataelements/tools/tracing/: CMakeLists.txt
hardware/signals/dataelements/tools/tracing/src/: signaltracer.cpp
hardware/signals/vehiclesignalsdaemon/test/ut/: Android.mk  AndroidTest.xml  CMakeLists.txt  dbus_server_test.cpp  message_inject_test.cpp  vsd_unit_test.cpp  vsm_test.cpp
hardware/signals/vehiclesignalsdaemon/test/ut/mocks/: misc_mock.cpp  misc_mock.h  pthread_mock.cpp  pthread_mock.h  vsm_inject_mock.cpp  vsm_inject_mock.h  vsm_sink_mock.cpp  vsm_sink_mock.h
hardware/signals/vehiclesignalsdaemon/test/ut/stubs/: VipFramework_stub.cpp
hardware/vehicle/climate/common_api_printers/: Android.bp  CMakeLists.txt
hardware/vehicle/climate/common_api_printers/include/: common_types_printers.h  first_row_printers.h  parking_climate_printers.h  second_and_third_row_printers.h
hardware/vehicle/climate/common_api_printers/source/: common_types_printers.cpp  first_row_printers.cpp  parking_climate_printers.cpp  second_and_third_row_printers.cpp
hardware/vehicle/climate/signal_proxy/: Android.bp  CMakeLists.txt
hardware/vehicle/climate/signal_proxy/include/: signal_proxy.h
hardware/vehicle/climate/vf_common/: Android.bp  CMakeLists.txt
hardware/vehicle/climate/vf_common/include/: autosar_printers.h  commonApiEventSubscription.h  dfsm.h  dispatcher.h  idispatcher.h  ilegacydispatcher.h  kpi_log.h  legacydispatcher.h  local_config_helper.h  logging.h  logging_basic.h  vfc_helper.h
hardware/vehicle/climate/vf_common/src/: autosar_printers.cpp  dfsm.cpp  dispatcher.cpp  legacydispatcher.cpp  vfc_helper.cpp
hardware/vehicle/climate/vf_common/test/ut/: CMakeLists.txt  test_appstorage.cpp  test_dfsm.cpp  test_dispatcher.cpp  test_lcfg.cpp  test_notifiable_property.cpp  test_vfc_helper.cpp
(+2830 files in other folders)
